--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ gh_edit_link                   : true
 gh_edit_link_text              : "Edit this page on GitHub." 
 gh_edit_repository             : "//github.com/tbr-development/.github" 
 gh_edit_branch                 : "main" 
-gh_edit_source                 : _docs
+gh_edit_source                 : docs
 gh_edit_view_mode              : "tree"
 back_to_top                    : true
 back_to_top_text               : "Back to top"  
